--- a/example.env
+++ b/example.env
@@ -33,6 +33,18 @@ PUBLIC_URL=http://localhost:8055
 # Logging level. Options: 'fatal', 'error', 'warn', 'info', 'debug', 'trace', 'silent'
 LOG_LEVEL=info
 
+# PM2 logging configuration
+# Path for PM2 error log file
+PM2_LOG_ERROR_FILE=/directus/logs/pm2-error.log
+# Path for PM2 output log file  
+PM2_LOG_OUT_FILE=/directus/logs/pm2-output.log
+# Enable PM2 log rotation
+PM2_LOGROTATE_ENABLE=true
+# Maximum size before log rotation
+PM2_LOGROTATE_MAX_SIZE=10M
+# Number of rotated log files to retain
+PM2_LOGROTATE_RETAIN=7
+
 # Redirect the root of the application ('/') to a specific route.
 # Set to 'false' to disable.
 ROOT_REDIRECT=./admin
