feat(extensions): add automated extension creation and hot-reload fix (v1.1.0)
- Add \`./alto make extension\` command for interactive extension creation
- Automatically place extensions in ./directus/extensions/ directory
- Auto-add Docker volume mounts to docker-compose.base.yml
- Add CHOKIDAR_USEPOLLING=true config for macOS/Windows hot-reload fix
- Cross-platform sed support for volume insertion
- Add comprehensive extension development workflow documentation
- Update README with extension creation and hot-reloading troubleshooting

This provides a zero-configuration workflow for Directus extension development
with working hot-reload on all platforms.

BREAKING CHANGE: None
FEATURES:
- \`alto make extension\` command for automated extension scaffolding
- Cross-platform hot-reload fix for Docker on macOS/Windows via CHOKIDAR_USEPOLLING
- Auto-configuration of Docker volume mounts
- Enhanced extension development documentation

--- a/docker-compose.base.yml
+++ b/docker-compose.base.yml
@@ -22,6 +22,7 @@ services:
       - ./directus/data/uploads:/directus/uploads
       - ./directus/data/logs:/directus/logs
       # Mount your extensions here as separate volumes to prevent overwriting the base extensions in the base image
+      # Use: ./alto make extension - to create and automatically mount new extensions
       # - ./directus/extensions/your-extension:/directus/extensions/your-extension
     ports:
       - "127.0.0.1:8055:8055"
