--- a/example.env
+++ b/example.env
@@ -81,6 +81,20 @@ ACCESS_TOKEN_TTL=6h
 
 
 # ------------------------------------------------------------------------------
+# Extensions Development (Development Only)
+#
+# File watching configuration for extension hot-reloading in Docker.
+# See: https://github.com/directus/directus/issues/18721
+# ------------------------------------------------------------------------------
+# Enables polling-based file watching for Docker environments on macOS/Windows.
+# This fixes extension hot-reloading issues when developing extensions in containers.
+# Polling periodically checks for file changes instead of relying on filesystem events,
+# which may not work correctly when files are mounted from host OS to Docker container.
+# Only enable for development; disable for production to save CPU resources.
+# CHOKIDAR_USEPOLLING=true
+
+
+# ------------------------------------------------------------------------------
 # Database
 #
 # Connection details for the PostgreSQL database.
